# ILDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  plugin.json  pyproject.toml  vpm.json
include/volt/: ilda_circuit.h  ilda_cis.h  ilda_crf.h  ilda_defects.h  ilda_json_exporter.h  ilda_mesh.h  ilda_options.h  ilda_plane.h  ilda_ptm_neighbor_query.h  ilda_service.h  ilda_types.h
scripts/: ilda_plugin_wrapper.py
src/: ilda_circuit.cpp  ilda_cis.cpp  ilda_crf.cpp  ilda_defects.cpp  ilda_json_exporter.cpp  ilda_mesh.cpp  ilda_plane.cpp  ilda_ptm_neighbor_query.cpp  ilda_service.cpp  main.cpp
